examples/k3d-cfk/local/controlcenter.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c3-ingress
  namespace: confluent
spec:
  ingressClassName: nginx
  rules:
  - host: c3.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controlcenter-0-internal
            port:
              number: 9021
